--- a/index.html
+++ b/index.html
@@ -512,7 +512,6 @@
         </section>
 
         <!--== BANNER ==-->
-        <!--Slide-->
         <li class="item-a">
             <div class="banner-box f-slide-3">
                 <div class="banner-text-container">
@@ -568,8 +567,9 @@
     <!--== JS ==-->
     <!--Jquery-->
     <script src="assets/js/jquery.js"></script>
+    <!--Ligth Slider-->
     <script src="assets/js/lightslider.js"></script>
+    <!--Main JS-->
     <script src="assets/js/main.js"></script>
-
 </body>
 </html>
